# game-theory

./: CMakeLists.txt  README.md  main.cpp  team.cpp  team.h
example/: README.md  team_api.md  test.lua
example/teams/: bull.lua  rage.lua  randy.lua
src/: game_match.cpp  game_match.h  lua_serialize.h  my_team.cpp  my_team.h  team.cpp  team.h  turn_action.cpp  turn_action.h  turn_data.cpp  turn_data.h  utils.cpp  utils.h
src/bots/: angry_team.cpp  angry_team.h  bull_team.cpp  bull_team.h
